# stitchtly-chatbot

./: .gitignore  pyproject.toml
notebooks/: test_text_to_sql.ipynb
src/db/: connection.py
